<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schiffeversenken</string>
    <string name="action_settings">Settings</string>
    <string name="hello_ships">Willkommen beim Schiffeversenken - hoffentlich die des Gegners :-)</string>
    <string name="label_spieltyp">Spieltyp</string>
    <string name="label_gegner">Gegner</string>
    <string name="label_btn_start">Schlacht beginnen!</string>
    <string name="label_btn_mpi_start">MPi_TryOut</string>
    <string name="label_btn_cfg">Configuration</string>

    <string name="label_btn_bg_victory_ceremony">Zur Siegerehrung</string>

    <string name="label_btn_vc_new_game">Neues Spiel?</string>
    <string name="label_btn_vc_cancel">Ich mach Feierabend...</string>


    <string-array name="gametype">
        <item>Standardregeln</item>
        <item>Erweiterte Regeln</item>
    </string-array>

    <string-array name="opponent">
        <item>Computer</item>
        <item>Mensch</item>
    </string-array>


</resources>
