<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WelcomeActivity" >

    <TextView
        android:id="@+id/_welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_ships" />

    <TextView
            android:id="@+id/label_spieltyp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/_welcome_msg"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:text="@string/label_spieltyp"
            />

    <Spinner
            android:id="@+id/spinner_gametype"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_spieltyp"
            android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/label_gegner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_gametype"
        android:layout_marginTop="20dp"
        android:text="@string/label_gegner" />

    <Spinner android:id="@+id/spinner_opponent"
             android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_gegner"
            android:layout_marginTop="20dp"
            />

    <Button android:id="@+id/button_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_cfg"
            android:layout_below="@id/spinner_opponent"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            />

    <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="onClickBeginButton"
            android:text="@string/label_btn_start" />

</RelativeLayout>